# edge-assistant

./: .gitignore  README.md
backend/: .gitignore  __init__.py  pyproject.toml
backend/chat/: __init__.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py  __init__.py
backend/core/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/rag/: apps.py  clients.py  llm_streamer.py  tasks.py  utils.py  views.py
backend/rag/data/: Fake_Employee_Data.xlsx
backend/rag/management/: __init__.py
backend/rag/management/commands/: __init__.py  embed_dataset.py
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.css  App.js  App.tsx  index.css
frontend/src/chat/: types.ts
frontend/src/chat/components/: ChatBox.tsx  ChatHistoryList.tsx  ChatRow.tsx  ChatSearchBar.tsx  ChatSidebar.tsx
frontend/src/chat/pages/: ChatPage.tsx
frontend/src/components/: ChatBox.tsx  ChatSidebar.tsx
frontend/src/constants/: api.ts
