[project]
name = "backend"
version = "0.1.0"
description = "Backend for EdgeSignal Assistant"
authors = [
    {name = "Shahroz Ahmad", email = "ishahrozahmad90@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "channels[daphne]>=4.2.0",
    "django>=5.1.6",
    "djangorestframework>=3.15.2",
    "openai>=1.61.1",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.5",
]

[tool.ruff]
lint.select = ["ALL"]
line-length = 91
